<resources>
    <string name="app_name">CYLogReport</string>
    <string name="bug_type">问题和意见反馈</string>
    <string name="not_set">未设置</string>
    <string name="bug_desc">问题描述</string>
    <string name="bug_title">标题（可选）</string>
<!--    <string name="bug_details_sample">请按步骤详细描述问题</string>-->
    <string name="bug_details_sample">请按步骤详细描述问题，例如：\n1.打开"XXX"App\n2.执行某个操作，如：点击新增按钮\n3.使用5秒后，系统强制退出。</string>
    <string name="must_happen">是否必现</string>
    <string name="date">日期</string>
    <string name="happen_time">发生时间</string>
    <string name="upload_photo">上传照片（最多3张）</string>
    <string name="contacts_method">联系方式</string>
    <string name="phone_number">电话号码</string>
    <string name="email">邮箱</string>
    <string name="submit">提交</string>
    <string name="offline_log">离线日志</string>
    <string name="my_feedback">我的反馈</string>
    <string name="log_setting_desc">本工具用于复现手机缺陷，记录日志并上传。</string>
    <string name="begin_log_record">开始记录离线日志</string>
    <string name="history_log">历史日志</string>
    <string name="choose_modem_config_file">选择配置文件</string>
    <string name="modem_log_config_file">Modem Log 配置文件</string>
    <string name="please_setting_log">请设置Log开关！</string>
    <string name="log_recording">正在记录离线日志</string>
    <string name="log_start_recording">开始记录离线日志~~</string>
    <string name="log_record_stop">停止记录</string>
    <string name="log_record_restart">重新开始记录</string>
    <string name="press_to_start">按住开始</string>
    <string name="video_time_too_short">视频录制时间太短！</string>
    <string name="video_completed">视频录制完成！</string>
    <string name="capture_video">录制视频</string>
    <string name="start_video">开始录制</string>
    <string name="report_save_ok">您提交的问题已保存，准备上传到DFX，感谢支持！~~</string>
    <string name="ask_if_go_to_login">尚未绑定系统账号，是否登录？</string>
    <string name="login_failed">登录失败，请稍后重试！</string>
    <string name="not_permitted_login">未授权不可登录账号！</string>
    <string name="hint_title">例如:手机经常死机怎么办</string>
    <string name="phone_or_email">电话/邮箱</string>
    <string name="must_agree_request">必须同意截屏请求，否则无法录制屏幕视频。</string>
    <string name="request_storage_failed">获取媒体权限存储权限失败，无法保存视频文件！</string>
    <string name="screen_video_recording">正在录制屏幕视频~~</string>
    <string name="screen_recording">录屏</string>
    <string name="if_stop_screen_recording">正在录制屏幕视频，是否停止？</string>
    <string name="file">附件</string>
    <string name="selected_file">请选择附件</string>
    <string name="log_file">日志文件</string>
    <string name="no_log_file">无日志文件</string>
    <string name="start_screen_video_recode_too">是否同时开启录制屏幕视频</string>
    <string name="compress_file_failed">压缩文件失败！</string>
    <string name="remaining_points">剩余积分</string>
    <string name="consume_points">已消费积分</string>
    <string name="remaining_award">剩余红包</string>
    <string name="consume_award">已消费红包</string>
    <string name="my_award">我的奖励</string>
    <string name="marked_bug_type">已标记的提单类型：</string>
    <string name="score">积分：</string>
    <string name="award">红包：</string>
    <string name="load_more">加载更多</string>
    <string name="please_not_reset_pic">请勿重复添加照片！</string>
    <string name="beta_report_submit_success">问题单附件已上传成功！</string>
    <string name="beta_report_appendix_submit_success">问题单与附件已提交成功！</string>
    <string name="save_database_failed">保存数据库失败！</string>
    <string name="create_time">提单时间 ：</string>
    <string name="not_login">尚未登录！</string>
    <string name="logout_successfully">已成功退出登录！</string>
    <string name="delete">删除</string>
    <string name="confirm_cancel_upload_video">是否确认放弃上传视频？</string>
    <string name="confirm_cancel_upload_log">是否确认放弃上传日志？</string>
    <string name="logout">退出登录</string>
    <string name="abandon_current_edit_content">是否放弃提交已编辑的提单内容？</string>
    <string name="please_input_bug_desc">请输入问题描述！</string>
    <string name="version_name_format">（Ver%1$s）</string>
    <string name="please_input_valid_contacts">请输入合法的联系方式，电话号码或邮箱！</string>
    <string name="upload_all_beta_reports">全部问题单已完成上传！</string>
    <string name="stop_gps_persistence">暂停GPS保持</string>
    <string name="restart_gps_persistence">重启GPS保持</string>
    <string name="restart_gps_persistence_after_five_minues">5分钟后重新开启GPS保持</string>
    <string name="prop_setting_success">设置成功！</string>
    <string name="waiting_for_confirm">待工作人员确认</string>
    <string name="reboot">是否异常关机或重启</string>
    <string name="bt_log_restart_bt_device">开启BT LOG需要重启蓝牙设备</string>
    <string name="voc_log_setting_hint">本工具用于复现手机缺陷，记录日志并上传。</string>
    <string name="starting_log_record">正在开启日志~~</string>
    <string name="please_set_log_on_off">请设置Log开关</string>
    <string name="log_record_ing">录Log中</string>
    <string name="max_time_is_ten_minutes">开始记录离线日志，最大录制时长为10分钟</string>
    <string name="double_tap_save">双击保存</string>
    <string name="video_record_ing">录屏中</string>
    <string name="all_report_submited_successfully">全部问题单已提交！</string>
    <string name="modem">Modem</string>
    <string name="datacall">DataCall</string>
    <string name="imstest">IMStest</string>
    <string name="irat">IRAT</string>
    <string name="power_on">PowerOn</string>
    <string name="rf">RF</string>
    <string name="uim">UIM</string>
    <string name="voice_call">VoiceCall</string>
    <string name="audio">Audio</string>
    <string name="sensor">sensor</string>
    <string name="qxdm">开启/关闭qxdm</string>
    <string name="qxdm_btn_text">QXDM开关</string>
    <string name="save_sdcard_text">当前状态信息存至SD卡</string>
    <string name="routine_log">常规Log</string>
    <string name="clean_log">清除日志</string>
    <string name="line">test</string>

    <string name="confirm_clean_log">是否清除之前SD卡记录的日志？</string>
    <string name="home_tab_name">Home</string>
    <string name="config_tab_name">Config</string>
    <string name="manage_tab_name">Manage</string>
    <string name="monitor_tab_name">Monitor</string>
    <string name="setting">setting</string>
    <string name="select_all">select_all</string>
    <string name="switch_config">switch_config</string>
    <string name="monitor_tomb_stone">检测到发生了TombStone,是否需要上传Log日志,以便帮助开发人员快速的解决问题?</string>
    <string name="monitor_anr_system">检测到系统发生了ANR,是否需要上传Log日志,以便帮助开发人员快速的解决问题?</string>
    <string name="monitor_crash_app">检测到App停止运行,是否需要上传Log日志,以便帮助开发人员快速的解决问题?</string>
    <string name="monitor_framework_reboot">检测到系统重启,是否需要上传Log日志,以便帮助开发人员快速的解决问题?</string>
    <string name="monitor_subsystem_reset">检测到系统重置,是否需要上传Log日志,以便帮助开发人员快速的解决问题?</string>
    <string name="monitor_crash">检测到系统发生了Crash,是否需要上传Log日志,以便帮助开发人员快速的解决问题?</string>
    <string name="monitor_anr_app">检测到应用发生了ANR,是否需要上传Log日志,以便帮助开发人员快速的解决问题?</string>

</resources>