<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.coolyota.logreport.LogSettingActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_padding"
                android:gravity="left|center_vertical"
                android:text="@string/routine_log"
                android:textColor="#212121"
                />


            <Switch
                android:id="@+id/switch_yota_log"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="64dp"
                android:button="@drawable/switch_selector"
                android:buttonTintMode="screen"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"

                android:thumb="@null"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_save_sdcard"
                android:text="@string/save_sdcard_text"

                android:gravity="center_vertical"
                android:background="@android:color/white"
                android:paddingEnd="@dimen/activity_padding"
                android:paddingStart="@dimen/activity_padding"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:layout_weight="2"
                />

            <Button
                android:id="@+id/btn_clean_log"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/activity_padding"
                android:paddingStart="@dimen/activity_padding"
                android:text="@string/clean_log"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_qxdm"
            android:text="@string/qxdm_btn_text"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingEnd="@dimen/activity_padding"
            android:paddingStart="@dimen/activity_padding"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            />

        <RelativeLayout
            android:id="@+id/line_modify_bug_type"
            android:layout_width="match_parent"
            android:paddingEnd="@dimen/activity_padding"
            android:paddingStart="@dimen/activity_padding"
            android:layout_height="@dimen/item_common_height"
            android:background="@drawable/profile_item_bg_color_selector">

            <TextView
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/bug_type"/>

            <Spinner
                android:visibility="gone"
                android:id="@+id/spinner_bug_type"
                style="@style/TextContentAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:entries="@array/bug_types"
                android:gravity="center_vertical"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_bug_details"
            android:paddingEnd="@dimen/activity_padding"
            android:paddingStart="@dimen/activity_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@android:color/white"
            android:gravity="top|start"
            android:textSize="14sp"
            android:textColor="#000"
            android:hint="@string/bug_details_sample"
            android:inputType="textMultiLine"
            android:minLines="2"/>

        <TextView
            style="@style/TextTitleStyle"
            android:layout_width="match_parent"
            android:paddingEnd="@dimen/activity_padding"
            android:paddingStart="@dimen/activity_padding"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/upload_photo"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_padding"
            android:paddingStart="@dimen/activity_padding"
            >

            <LinearLayout
                android:id="@+id/parent_add_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_selector"/>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_selector"/>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_selector"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/parent_delete_pic"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="start|top"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="60dp"
                    android:background="@null"
                    android:src="@drawable/ic_delete_pic"
                    android:visibility="invisible"/>

                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="60dp"
                    android:background="@null"
                    android:src="@drawable/ic_delete_pic"
                    android:visibility="invisible"/>

                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="60dp"
                    android:background="@null"
                    android:src="@drawable/ic_delete_pic"
                    android:visibility="invisible"/>
            </LinearLayout>
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_phone_number"
            android:layout_width="match_parent"
            android:paddingEnd="@dimen/activity_padding"
            android:paddingStart="@dimen/activity_padding"
            android:layout_height="@dimen/item_common_height"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:gravity="start|center_vertical"
            android:hint="@string/phone_or_email"
            android:inputType="text"/>

        <CheckBox
            android:id="@+id/check_delete_upload_files"
            style="@style/TextTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_common_height"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:checked="true"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:text="@string/delete_after_file_upload"
            android:visibility="gone"/>

        <com.coolyota.logreport.ui.RotateInButton
            android:layout_marginLeft="@dimen/activity_padding"
            android:layout_marginRight="@dimen/activity_padding"
            android:id="@+id/button_submit"
            style="@style/SubmitRotateInButtonCommonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:enabled="true"
            app:text="@string/submit">
        </com.coolyota.logreport.ui.RotateInButton>


        <LinearLayout
            android:id="@+id/progress_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_padding"
            android:layout_marginRight="@dimen/activity_padding"
            android:visibility="gone"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/downloadSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="--M/--M"
                    android:textSize="10sp"/>

                <TextView
                    android:id="@+id/netSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="---K/s"
                    android:textSize="10sp"/>

                <TextView
                    android:id="@+id/tvProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="--.--%"
                    android:textSize="10sp"/>

            </RelativeLayout>

            <com.coolyota.logreport.ui.CyNumberProgressBar
                android:id="@+id/pbProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:progress_reached_bar_height="1.5dp"
                app:progress_reached_color="#3498DB"
                app:progress_text_color="#3498DB"
                app:progress_text_size="10sp"
                app:progress_unreached_bar_height="0.75dp"
                app:progress_unreached_color="#CCCCCC"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="18"
            android:textColor="#f00"
            android:textSize="14sp"
            />


    </LinearLayout>
</ScrollView>
